--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 			<p>
 				- JavaScript developer<br>
-				- Love rock music<br>
+				- Rock music lover<br>
 				- Formula 1 fan<br>
 				- Addicted to cycling
 			</p>
