--- a/index.html
+++ b/index.html
@@ -35,13 +35,12 @@
 			<p>My internet accounts:</p>
 
 			<ul class="social">
-				<li><a class="email" href="mailto://kirilldronkin@gmail.com" target="_blank" title="Gmail"></a></li>
-				<li><a class="skype" href="callto://kirill.dronkin." target="_blank" title="Skype"></a></li>
+				<li><a class="email" href="mailto:kirilldronkin@gmail.com" target="_blank" title="Gmail"></a></li>
+				<li><a class="skype" href="callto:kirill.dronkin." target="_blank" title="Skype"></a></li>
 				<li><a class="linkedin" href="https://ru.linkedin.com/in/kirilldronkin" target="_blank" title="LinkedIn"></a></li>
 				<li><a class="github" href="https://github.com/kirilldronkin" target="_blank" title="GitHub"></a></li>
 				<li><a class="vk" href="https://vk.com/kirilldronkin" target="_blank" title="Vk"></a></li>
 				<li><a class="twitter" href="https://twitter.com/kirilldronkin" target="_blank" title="Twitter"></a></li>
-				<li><a class="badoo" href="https://badoo.com/profile/0471464615" target="_blank" title="Badoo"></a></li>
 			</ul>
 		</div>
 	</body>
