--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
 	<body class="animated bounceInDown">
 		<div class="avatar">
-			<img src="img/avatar.jpeg" alt="Avatar">
+			<img src="img/avatar.jpg" alt="Avatar">
 		</div>
 
 		<div class="content">
-			<h1 class="title">Hey!<br>I'm Kirill Dronkin</h1>
+			<h1 class="title">Hi!<br>I'm Kirill Dronkin</h1>
 
 			<p>
 				I'm currently living in Tomsk, Russia<br><br>
