--- a/index.html
+++ b/index.html
@@ -1,41 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="utf-8">
 		<title>Kirill Dronkin</title>
+
+		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+
 		<link rel="icon" href="favicon.ico" type="image/x-icon">
+		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 		<link rel="stylesheet" href="css/style.css">
-		<!--[if lt IE 9]>
-			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-		<![endif]-->
+
+		<!-- Yandex.Metrika counter -->
+		<script type="text/javascript" >
+		  (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})(window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+		  ym(53679043, "init", {
+		  	clickmap:true,
+		    trackLinks:true,
+		    accurateTrackBounce:true
+		  });
+		</script>
+		<noscript>
+			<div>
+				<img src="https://mc.yandex.ru/watch/53679043" style="position:absolute; left:-9999px;" alt="" />
+			</div>
+		</noscript>
+		<!-- /Yandex.Metrika counter -->
 	</head>
 
-	<body class="animated bounceInDown">
-		<div class="avatar">
-			<img src="img/avatar.jpg" alt="Avatar">
-		</div>
+	<body class="animated bounce-in-down">
+		<div>
+			<div class="avatar">
+				<img src="img/avatar.jpg" alt="Avatar">
+			</div>
 
-		<div class="content">
-			<h1 class="title">Hi!<br>I'm Kirill Dronkin</h1>
-
-			<p>
-				I'm currently living in Tomsk, Russia<br><br>
-				Some facts about me:
-			</p>
-
-			<p>
-				- JavaScript developer<br>
-				- Rock music lover<br>
-				- Formula 1 fan<br>
-				- Addicted to cycling
-			</p>
-
-			<p>My internet accounts:</p>
+			<h1>Kirill Dronkin</h1>
+			<h3>Web Developer</h3>
 
 			<ul class="social">
-				<li><a class="email" href="mailto:kirilldronkin@gmail.com" target="_blank" title="Gmail"></a></li>
+				<li><a class="gmail" href="mailto:kirilldronkin@gmail.com" target="_blank" title="Gmail"></a></li>
 				<li><a class="skype" href="callto:kirill.dronkin." target="_blank" title="Skype"></a></li>
 				<li><a class="linkedin" href="https://ru.linkedin.com/in/kirilldronkin" target="_blank" title="LinkedIn"></a></li>
 				<li><a class="github" href="https://github.com/kirilldronkin" target="_blank" title="GitHub"></a></li>
