--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="description" content="Kirill Dronkin's personal page">
 
 		<link rel="icon" href="favicon.ico" type="image/x-icon">
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -37,12 +38,12 @@
 			<h3>Web Developer</h3>
 
 			<ul class="social">
-				<li><a class="gmail" href="mailto:kirilldronkin@gmail.com" target="_blank" title="Gmail"></a></li>
-				<li><a class="skype" href="callto:kirill.dronkin." target="_blank" title="Skype"></a></li>
-				<li><a class="linkedin" href="https://ru.linkedin.com/in/kirilldronkin" target="_blank" title="LinkedIn"></a></li>
-				<li><a class="github" href="https://github.com/kirilldronkin" target="_blank" title="GitHub"></a></li>
-				<li><a class="vk" href="https://vk.com/kirilldronkin" target="_blank" title="Vk"></a></li>
-				<li><a class="twitter" href="https://twitter.com/kirilldronkin" target="_blank" title="Twitter"></a></li>
+				<li><a class="gmail" href="mailto:kirilldronkin@gmail.com" rel="noopener" target="_blank" title="Gmail"></a></li>
+				<li><a class="skype" href="callto:kirill.dronkin." rel="noopener" target="_blank" title="Skype"></a></li>
+				<li><a class="linkedin" href="https://ru.linkedin.com/in/kirilldronkin" rel="noopener" target="_blank" title="LinkedIn"></a></li>
+				<li><a class="github" href="https://github.com/kirilldronkin" rel="noopener" target="_blank" title="GitHub"></a></li>
+				<li><a class="vk" href="https://vk.com/kirilldronkin" rel="noopener" target="_blank" title="Vk"></a></li>
+				<li><a class="twitter" href="https://twitter.com/kirilldronkin" rel="noopener" target="_blank" title="Twitter"></a></li>
 			</ul>
 		</div>
 	</body>
